--- a/README.html
+++ b/README.html
@@ -53,6 +53,8 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 
 
 
+<div id="regex" class="section level1">
+<h1>regex</h1>
 <div id="perl-regex-cheatsheet-with-examples-in-r" class="section level3">
 <h3>perl regex cheatsheet with examples in R</h3>
 <p>* <a href="#specific-characters">Characters, metacharacters, and quantifiers</a><br />* <a href="#anchors">Anchors and look-arounds</a><br />* <a href="#character-class-shortcuts">Character shortcuts and special characters</a><br />* <a href="#examples">Examples</a></p>
@@ -576,6 +578,7 @@ gsub('(.+\\s)(\\w+)(\\s|-)(keyword)(\\s|-)(\\w+).*', '\\2', p1, perl = TRUE)
 gsub('(.+\\s)(\\w+)(\\s|-)(keyword)(\\s|-)(\\w+).*', '\\6', p1, perl = TRUE)</code></pre>
 <pre><code>## [1] &quot;here&quot;</code></pre>
 <pre><code>## [1] &quot;there&quot;</code></pre>
+</div>
 </div>
 
 
