--- a/README.html
+++ b/README.html
@@ -145,7 +145,8 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 </tbody>
 </table>
 <p><strong>Metacharacters</strong></p>
-<p>The following characters need to be escaped because they have special meanings: <code>\ | ( ) [ { ^ $ * + ? .</code></p>
+<p>The following characters need to be escaped because they have special meanings:</p>
+<p><code>\ | ( ) [ { ^ $ * + ? .</code></p>
 <table>
 <thead>
 <tr class="header">
