--- a/README.html
+++ b/README.html
@@ -160,8 +160,8 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <td align="left">match any single character (except <code>\n</code>; use <code>/s</code> to match <code>\n</code>, too)</td>
 </tr>
 <tr class="even">
-<td align="left"><code>|</code></td>
-<td align="left">matches either the subexpression preceding or following it</td>
+<td align="left"><code>a|b</code></td>
+<td align="left">matches either the subexpression preceding or following it (a or b)</td>
 </tr>
 <tr class="odd">
 <td align="left"><code>( )</code></td>
