--- a/README.html
+++ b/README.html
@@ -565,17 +565,24 @@ gsub('(?&lt;=[,.](?!(?&lt;=\\d[,.])(?=\\d)))', ' ', p1, perl = TRUE)</code></pre
 gsub(&quot;([^.!?\\s])([^.!?]*(?:[.!?](?!['\&quot;]?\\s|$)[^.!?]*)*[.!?]?['\&quot;]?)(?=\\s|$)&quot;, &quot;\\U\\1\\E\\2&quot;, txt, perl = TRUE)</code></pre>
 <pre><code>## [1] &quot;This is just a test! I'm not sure if this is o.k. Or if it will work? Who knows? Regex is sorta new to me... There are certain cases that I may not figure out. Sad!&quot;</code></pre>
 <p>Explanation:</p>
-<pre><code>[^.!?\\s]         # match sentence ending in punctuation (. or !) or end of string
-[^.!?]*           # first char is non-punct, non-whitespace
-(?:               # greedily consume up to punctuation
-  [.!?]           # group for unrolling the loop
-  (?!['\&quot;]?\\s|$) # (special) inner punctuation ok if
-  [^.!?]*         # not followed by ws or EOS
-)*                # greedily consume up to punctuation
-[.!?]?            # zero or more (special normal*)
-['\&quot;]?            # optional ending punctuation
-(?=\\s|$)&quot;        # optional closing quote</code></pre>
-<p>* <strong>Capturing a word before (or after) a keyword</strong></p>
+<p>``` [^.!?\\s] # match sentence ending in punctuation (. or !) or end of string [^.!?]* # first char is non-punct, non-whitespace (?: # greedily consume up to punctuation [.!?] # group for unrolling the loop (?[’&quot;]?\s|$) # (special) inner punctuation ok if [^.!?]* # not followed by ws or EOS )* # greedily cons</p>
+<p>* <strong>Extracting time formats from strings</strong></p>
+<pre class="r"><code>p1 &lt;- c('R uses 1:5 for 1, 2, 3, 4, 5.', 
+        'At 3:00 we will meet up and leave by 4:30:20.',
+        'We will meet at 6:33.', 'He ran it in 0:22.34829985234 seconds.')
+regmatches(p1, gregexpr('\\d{0,2}:\\d{2}(?:[:.]\\d+)?', p1))</code></pre>
+<pre><code>## [[1]]
+## character(0)
+## 
+## [[2]]
+## [1] &quot;3:00&quot;    &quot;4:30:20&quot;
+## 
+## [[3]]
+## [1] &quot;6:33&quot;
+## 
+## [[4]]
+## [1] &quot;0:22.34829985234&quot;</code></pre>
+<p>ume up to punctuation [.!?]? # zero or more (special normal*) [’&quot;]? # optional ending punctuation (?=\s|$)&quot; # optional closing quote ``` * <strong>Capturing a word before (or after) a keyword</strong></p>
 <p>This is an example of creating and referencing groups. Each <code>( )</code> defines a group and can be referenced with <code>\\N</code> for the N<sup>th</sup> group.</p>
 <pre class="r"><code>p1 &lt;- 'I want this here-keyword there'
 gsub('(.+\\s)(\\w+)(\\s|-)(keyword)(\\s|-)(\\w+).*', '\\2', p1, perl = TRUE)
