--- a/_html/README.html
+++ b/_html/README.html
@@ -53,16 +53,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 
 
 <!-- Grab toc from .html since not copied over with keep_md: yes -->
-<style type="text/css">
-.main-container {
-  max-width: 940px;
-  margin-left: auto;
-  margin-right: auto;
-}
-</style>
 <div class="container-fluid main-container">
-
-
 <div id="header">
 <h1 class="title">
 regex in R cheatsheet
@@ -163,6 +154,7 @@ regex in R cheatsheet
 </ul>
 </li>
 </ul>
+</div>
 </div>
 <div id="other-resources" class="section level2">
 <h2>other resources</h2>
