--- a/regex.html
+++ b/regex.html
@@ -107,7 +107,7 @@ img {
 
 <div id="other-resources" class="section level2">
 <h2>Other resources</h2>
-<p>* <strong><a href="https://www.regex101.com">Regex 101</a></strong><br />* <a href="http://regexpal.com">Regex tester</a><br />* <strong><a href="http://regexcrossword.com">ReGeX cRoSsWoRdS!</a></strong><br />* <strong><a href="http://rick.measham.id.au/paste/explain.pl?regex=%28%3F&lt;%3Dfoo%29%5Cs%2Afoo%5BA-Z%5D%5Cd%7B2%2C3%7D">Text explainer</a></strong><br />* <a href="https://www.debuggex.com">Explainer 1 (with flavors)</a><br />* <a href="http://www.regexper.com">Explainer 2 (javascript)</a></p>
+<p>* <strong><a href="https://www.regex101.com">Regex 101</a></strong><br />* <a href="http://regexpal.com">Regex tester</a><br />* <strong><a href="http://regexcrossword.com">ReGeX cRoSsWoRdS!</a></strong><br />* <strong><a href="http://regex.alf.nu">regex golf!</a></strong><br />* <strong><a href="http://rick.measham.id.au/paste/explain.pl?regex=%28%3F&lt;%3Dfoo%29%5Cs%2Afoo%5BA-Z%5D%5Cd%7B2%2C3%7D">Text explainer</a></strong><br />* <a href="https://www.debuggex.com">Explainer 1 (with flavors)</a><br />* <a href="http://www.regexper.com">Explainer 2 (javascript)</a></p>
 </div>
 <div id="references" class="section level2">
 <h2>References</h2>
